[package]
name = "dagger"
description = "DMARK Aggregate E-Mail Report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.14"
serde = { version = "1", features = [ "derive" ] }
serde-xml-rs = "0.6"
zip = { version = "0.6.6", default-features = false, features = [ "deflate" ] }
