[package]
name = "dagger"
description = "DMARC Aggregate Email Report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
flate2 = "1"
mailparse = "0.14"
quick-xml = { version = "0.31", default-features = false, features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
tabled = { version = "0.12", default-features = false, features = [ "std" ] }
zip = { version = "0.6.6", default-features = false, features = [ "deflate" ] }
